@@ -11,6 +11,7 @@ defmodule Chunky.Math do
    - `factors/1` - All divisors for an integer
    - `pow/2` - Integer exponentiation
    - `prime_factors/1` - Factorize an integer into prime factors
+   - `product_of_prime_factor_exponents/1` - Decompose `n` to prime factors of the form `x^y`, find product of all `y`
   
   ## Number Theory
 
@@ -158,6 +159,40 @@ defmodule Chunky.Math do
   """
   def aliquot_sum(n) when is_integer(n) and n > 0 do
       factors(n) -- [n] |> Enum.sum()
+  end
+  
+  @doc """
+  Find the product of the exponents of the prime factors of `n`.
+  
+  This function takes the prime factors of `n`, such as the factors of `8 = {1, 2, 2, 2}`,
+  groups the factors and to find the exponents, such as `8 = 1^1 * 2^3`, and then 
+  finds the product of the _exponents_, like `1 * 3`. Here the product of
+  prime factorization exponents for `8` is `3`.
+  
+  The numbers generated by this function are related to the OEIS Sequence [A005361](https://oeis.org/A005361),
+  and the [prodex](https://en.wikipedia.org/wiki/Highly_powerful_number) function.
+  
+  ## Examples
+  
+      iex> Math.product_of_prime_factor_exponents(8)
+      3
+      
+      iex> Math.product_of_prime_factor_exponents(100000)
+      25
+  """
+  def product_of_prime_factor_exponents(n) when is_integer(n) and n > 0 do
+      
+      # find the prime factors
+      Math.prime_factors(n) 
+     
+      # group by factor - this is effectively finding the exponent of the factor
+      |> Enum.group_by(fn i -> i end) 
+     
+      # map to the length of the group (extract the exponent)
+      |> Enum.map(fn {_base, exp} -> length(exp) end)
+     
+      # multiply
+      |> Enum.reduce(1, fn x, acc -> x * acc end)    
   end
   
   @doc """
